fix: diamond icon overflow

--- a/src/components/creators/cards/StakerRewardInfoCard.module.sass
+++ b/src/components/creators/cards/StakerRewardInfoCard.module.sass
@@ -5,6 +5,7 @@
   flex-direction: column
   padding: 0
   border-radius: $border_radius_big
+  overflow: clip
 
   .TopSection
     padding: $space_normal
